-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Bob Glossman <bob.glossman@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/6bace048-50dc-11e5-95a9-5254006e85c2.
The sub-test test_77c failed with the following error:
test failed to respond and timed out
this test fail looks like LU-4499, but that has been marked Fixed. As far as I can tell the fix landed before the mod in this build.
16:23:54:LustreError: 24876:0:(hash.c:1253:cfs_hash_find_or_add()) ASSERTION( hlist_unhashed(hnode) ) failed: 16:23:54:LustreError: 24876:0:(hash.c:1253:cfs_hash_find_or_add()) LBUG 16:23:54:Kernel panic - not syncing: LBUG in interrupt. 16:23:54: 16:23:54:Pid: 24876, comm: ll_ost00_006 Tainted: P -- ------------ 2.6.32-573.3.1.el6_lustre.g4276203.x86_64 #1 16:23:54:Call Trace: 16:23:54: [<ffffffff815384e4>] ? panic+0xa7/0x16f 16:23:54: [<ffffffffa0713ebd>] ? lbug_with_loc+0x8d/0xb0 [libcfs] 16:23:54: [<ffffffffa0727d10>] ? cfs_hash_findadd_unique+0x0/0x30 [libcfs] 16:23:54: [<ffffffffa0727d28>] ? cfs_hash_findadd_unique+0x18/0x30 [libcfs] 16:23:54: [<ffffffffa0adf390>] ? nrs_orr_res_get+0x430/0xb70 [ptlrpc] 16:23:54: [<ffffffffa0ad4f86>] ? nrs_resource_get+0x56/0x110 [ptlrpc] 16:23:54: [<ffffffffa0a91935>] ? lustre_msg_buf+0x55/0x60 [ptlrpc] 16:23:54: [<ffffffffa0ad5d0b>] ? nrs_resource_get_safe+0x8b/0x100 [ptlrpc] 16:23:54: [<ffffffffa0ad99eb>] ? ptlrpc_nrs_req_hp_move+0x6b/0x210 [ptlrpc] 16:23:54: [<ffffffffa0abb165>] ? req_capsule_client_get+0x15/0x20 [ptlrpc] 16:23:54: [<ffffffffa0a6fab8>] ? ldlm_server_blocking_ast+0x238/0x8c0 [ptlrpc] 16:23:54: [<ffffffffa0af7329>] ? tgt_blocking_ast+0x1b9/0x8c0 [ptlrpc] 16:23:54: [<ffffffff8129bc34>] ? snprintf+0x34/0x40 16:23:54: [<ffffffffa0a4139e>] ? ldlm_work_bl_ast_lock+0xde/0x290 [ptlrpc] 16:23:54: [<ffffffffa0a87064>] ? ptlrpc_set_wait+0x74/0xa20 [ptlrpc] 16:23:54: [<ffffffff8117900d>] ? kmem_cache_alloc_node_trace+0x1cd/0x200 16:23:54: [<ffffffffa0a7e23e>] ? ptlrpc_prep_set+0xbe/0x270 [ptlrpc] 16:23:54: [<ffffffffa0a412c0>] ? ldlm_work_bl_ast_lock+0x0/0x290 [ptlrpc] 16:23:54: [<ffffffffa0a3dfcf>] ? ldlm_run_ast_work+0xcf/0x4a0 [ptlrpc] 16:23:54: [<ffffffffa0a5ca45>] ? ldlm_process_extent_lock+0x155/0xab0 [ptlrpc] 16:23:54: [<ffffffffa0a445be>] ? ldlm_lock_enqueue+0x47e/0x8e0 [ptlrpc] 16:23:54: [<ffffffffa0a710d7>] ? ldlm_handle_enqueue0+0x807/0x15b0 [ptlrpc] 16:23:54: [<ffffffffa0afbea1>] ? tgt_enqueue+0x61/0x230 [ptlrpc] 16:23:54: [<ffffffffa0afcaec>] ? tgt_request_handle+0x8bc/0x12e0 [ptlrpc] 16:23:54: [<ffffffffa0aa4731>] ? ptlrpc_main+0xe41/0x1910 [ptlrpc] 16:23:54: [<ffffffffa0aa38f0>] ? ptlrpc_main+0x0/0x1910 [ptlrpc] 16:23:54: [<ffffffff810a101e>] ? kthread+0x9e/0xc0 16:23:54: [<ffffffff8100c28a>] ? child_rip+0xa/0x20 16:23:54: [<ffffffff810a0f80>] ? kthread+0x0/0xc0
Info required for matching: sanityn 77c
- is related to
-
LU-4499 NRS ORR cfs_hash_find_or_add() LBUG
-
- Resolved
-