LU-7084 ptlrpc: add request to the HP list properly

There is small flaw in commit f904a6617b, the request was
added to the HP list 'hp' variable is set OR rq_ops are not
NULL, which is not correct, it can be added only if 'hp' is set.

Change-Id: I4f0115a9703c1df3f4e7cf631635dc3d45fe4b14
Signed-off-by: Mikhal Pershin <mike.pershin@intel.com>